completed page ui for each section

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@picocss/pico": "^1.5.11",
+    "feather-icons": "^4.29.1",
     "vue": "^3.3.11",
-    "vuetify": "^3.5.1"
+    "vue-feather": "^2.0.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
